agregando estilos a branch cabecera

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,6 +10,32 @@ body
 
 }
 
+
+
+#cabecera
+
+{
+
+	background: #33f;
+	color: white;
+	font-weight: bold;
+	margin: 0;
+	padding: 0.5em;
+
+
+}
+
+
+#cabecera #tagline
+{
+	padding: 0 0 0 1em;
+	font-weight: normal;
+	font-size: 0.8em;
+
+
+
+}
+
 #container
 {
    	width:70%;
@@ -25,3 +51,10 @@ body
 {
 	font-size: 20px;
 }
+
+#post
+{
+
+	padding: 1em;
+}
+
