--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,7 +17,7 @@ body
 
 {
 
-	background: #33f;
+	background: #33f;url("../imagenes/fuxion.jpg");
 	color: white;
 	font-weight: bold;
 	margin: 0;
